--- a/public/views/templates/register.ejs
+++ b/public/views/templates/register.ejs
@@ -3,17 +3,17 @@
 	<%- include('../includes/head.ejs')%>
 	<body>
 		<section class="register">
-			<form class="register-form" method="POST" action="/new-user">
+			<form class="register-form" method="POST" action="/register">
 				<h1><%=title%></h1>
 
 				<label for="name">Name</label><br />
-				<input type="text" required id="name" /><br />
+				<input type="text" required name="name" /><br />
 
-				<label for="username">Username</label><br />
-				<input type="text" required id="username" /><br />
+				<label for="email">Email</label><br />
+				<input type="email" required name="email" /><br />
 
 				<label for="password">Password</label><br />
-				<input type="password" required id="password" /><br />
+				<input type="password" required name="password" id="password" /><br />
 
 				<label for="conf-password">Confirm Password</label><br />
 				<input type="password" required id="conf-password" /><br />
