--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -9,6 +9,10 @@ body {
 	height: 100vh;
 	background: #323330;
 
+	h1 {
+		text-align: center;
+	}
+
 	.login,
 	.register {
 		background: #323330;
