--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   height: 100vh;
-  background: #323330;
+  background: #f4f4f4;
 }
 body h1 {
   text-align: center;
@@ -17,22 +17,25 @@ body .register {
   background: #323330;
   padding: 2rem;
   width: 100vw;
-  height: fit-content;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 body .login h1,
 body .register h1 {
   text-align: center;
   color: #323330;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 body .login .login-form,
 body .login .register-form,
 body .register .login-form,
 body .register .register-form {
-  background: #f4f4f4;
+  background: #f0db4f;
   width: 40rem;
   margin: auto;
-  padding: 4rem 6rem;
+  padding: 2rem 6rem;
   font-size: 18px;
 }
 body .login .login-form input,
@@ -40,17 +43,19 @@ body .login .register-form input,
 body .register .login-form input,
 body .register .register-form input {
   margin: 1rem 0rem;
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
   width: 100%;
   border: none;
+  background: #ffffff;
   border-radius: 0.5rem;
+  font-size: 16px;
 }
 body .login .login-form button,
 body .login .register-form button,
 body .register .login-form button,
 body .register .register-form button {
-  padding: 0.5rem 2rem;
-  margin: 1rem 0rem;
+  padding: 1rem 2rem;
+  margin: 2rem 0rem;
   width: 100%;
   border: none;
   background: #323330;
@@ -62,8 +67,15 @@ body .login .login-form button:hover,
 body .login .register-form button:hover,
 body .register .login-form button:hover,
 body .register .register-form button:hover {
-  background: green;
+  color: #f0db4f;
+  font-weight: bold;
   cursor: pointer;
+}
+body .login .login-form p,
+body .login .register-form p,
+body .register .login-form p,
+body .register .register-form p {
+  text-align: center;
 }
 body .landing-page {
   display: flex;
@@ -78,30 +90,33 @@ body .landing-page .right {
   justify-content: center;
 }
 body .landing-page .left {
-  background: #80adbc;
+  background: #f0db4f;
 }
 body .landing-page .right {
-  background: #efdfd5;
+  background: #323330;
 }
 body .landing-page .left button,
 body .landing-page .right button {
-  font-size: 20px;
+  font-size: 24px;
   padding: 1rem;
   width: 10rem;
   border: none;
   border-radius: 0.5rem;
 }
 body .landing-page .left button {
-  background: #efdfd5;
+  background: #323330;
+  color: #f0db4f;
 }
 body .landing-page .right button {
-  background: #80adbc;
+  background: #f0db4f;
+  color: #323330;
 }
 body .landing-page .left button:hover,
 body .landing-page .right button:hover {
   cursor: pointer;
   transform: translateY(-0.3rem);
   transition: 0.5s ease-in-out;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
